
* SOLR-17197: Fix getting fieldType by its name in FileBasedSpellChecker (Andrey Bozhko via Eric Pugh)

* SOLR-17198: AffinityPlacementFactory can fail if Shard leadership changes occur while it is collecting metrics.
  (Paul McArthur)

* SOLR-14892: Queries with shards.info and shards.tolerant can yield multiple null keys in place of shard names
  (Mathieu Marie, David Smiley)

Dependency Upgrades
---------------------

* SOLR-17157: Upgrade Lucene to 9.10.0 (hossman, Christine Poerschke)

Other Changes
---------------------
* SOLR-17126: Cut over System.getProperty to EnvUtils.getProperty (janhoy)

* SOLR-17066: GenericSolrRequest now has a `setRequiresCollection` setter that allows it to specify whether
  it should make use of the client-level default collection/core. (Jason Gerlowski)

* SOLR-17190: Replace org.apache.solr.util.LongSet with hppc LongHashSet (Michael Gibney)

* SOLR-12089: Update FileBasedSpellChecker and IndexBasedSpellChecker to accept accuracy parameter
  as float; deprecate `breakSugestionTieBreaker` parameter in favor of `breakSuggestionTieBreaker`
  in WordBreakSolrSpellChecker (Andrey Bozhko via Eric Pugh)

* SOLR-17201: Http2SolrClient and friends no longer marked as @lucene.experimental.
  Krb5HttpClientBuilder and PreemptiveBasicAuthClientBuilderFactory no longer deprecated (janhoy)

==================  9.5.0 ==================
New Features
---------------------
* SOLR-17006: Collection creation & adding replicas: User-defined properties are persisted to state.json and
  applied to new replicas, available for use as property substitution in configuration files.  (Vincent Primault)

* SOLR-16986: Log CPU time per request via solr.log.cputime (Gilles Bellaton, David Smiley)

* SOLR-16974: Circuit Breakers can now be configured globally (janhoy, Christine Poerschke)

* SOLR-16743: When using TLS, Solr can now auto-reload the keystore and truststore without the need to restart the process.